# windlang-rust

./: .gitignore  Cargo.toml  main.wind
.github/workflows/: build.yml  release.yml
examples/: gameOfLife.wind
src/: error.rs  lib.rs
src/compiler/: mod.rs
src/interpreter/: env.rs  mod.rs
src/lexer/: mod.rs  tests.rs  token.rs
src/parser/: ast.rs  mod.rs
src/vm/: mod.rs  opcode.rs  value.rs
