[package]
name = "windlang-rust"
version = "0.1.0"
edition = "2021"
default-run = "wind"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
overflow-checks = false
# debug = 1

[profile.dev]
opt-level = 0

[dependencies]
enum-as-inner = "0.5.0"
paste = "1.0"
mimalloc = { version = "*", default-features = false }
clap = { version="3.2.22", features=["derive"] }